# tempalert

./: .gitignore  README.md
client/: Cargo.toml  build.rs
client/proto/: temperatures.proto
client/src/: main.rs  temperatures.rs
kafka/: kafka-start.bat  kafka-start.sh  kafka-stop.bat  kafka-stop.sh
server/: config.ini  go.mod  go.sum  main.go  producer_test.go  sensorinfo.go  server_test.go
server/proto/: temperatures.proto
server/proto/proto/temperatures/: temperatures.pb.go
server/proto/temperatures/: temperatures.pb.go
