[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
futures = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
rdkafka = { version = "0.37.0", features = ["tokio"] }
tokio = { version = "1.44.0", features = ["full"] }

[build-dependencies]
prost-build = "0.13"
